force-app/main/default/objects/SpringCMApiEnvironment__mdt/SpringCMApiEnvironment__mdt.object-meta.xml
<CustomObject>
    <label>SpringCMApiEnvironment</label>
    <pluralLabel>SpringCMApiEnvironments</pluralLabel>
</CustomObject>