force-app/main/default/objects/SpringCMApiEnvironment__mdt/fields/AuthEndpoint__c.field-meta.xml
<CustomField>
    <fullName>AuthEndpoint__c</fullName>
    <label>Auth Endpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>https://authuat.springcm.com/api/v201606/</fullName>
            </value>
            <value>
                <fullName>https://auth.springcm.com/api/v201606/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>